# testpypi-package

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  setup.py
.github/workflow/: publishOnUpdate.yml
.github/workflows/: release.yml
kanishkan-test/: __main__.py
testPackage/: __init__.py  __main__.py
