[tool.poetry]
name = "Kanishkan-Test"
version = "0.2.2"
description = "Test Package to try functionality"
readme = "README.md"
authors = ["Kanishkan Kukarajah"]
repository = "https://github.com/kkanishkan/testpypi-package"
license = "MIT"
keywords = ["avro", "codegen", "avro schema", "typegen"]

[tool.black]
exclude = '''

(
  /(
      \.eggs         
    | \.git          
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | include
    | Kanishkan_Test.egg-info
    | bin
    | lib
    | testPackage\__pycache__
  )/
  | tests/snapshots
)
'''

[tool.poetry.dependencies]
python = "^3.9"
astor = "^0.8.1"
fastavro = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
snapshottest = "^0.6.0"

[tool.poetry.scripts]
sync-example = 'examples:generate_types_from_schemas'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"